--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  background: url(assets/Sea-2.jpg) no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-backround-size: cover;
+}
+.everything {
+  margin: 0px 0px 0px 40px;
+}
 .line1 {
   width: 250px;
 }
@@ -8,11 +20,11 @@ nav{
   width: 100%;
   top:0;
   z-index:10;
-  font-family: Gantari;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: 600;
-  text-transform: uppercase;
-  background-color: white;
-  opacity: 80%;
+  text-transform: capitalize;
+  background-color: rgb(170, 246, 255);
+  opacity: 75%;
 }
 nav ul {
   padding:0;
@@ -26,14 +38,14 @@ nav li {
   font-size: 1.7em;
 }
 nav li a {
-  color:rgb(0, 0, 0);
-  font-weight: 600;
+  color:rgb(6, 3, 86);
+  font-weight: 520;
   opacity: 0.9;
   text-decoration: none;
   transition: .3s;
 }
 nav li a:hover {
-  color:#2487EA;
+  color:#28659a;
   opacity: 1;
   text-decoration: none;
 }
