--- a/styles.css
+++ b/styles.css
@@ -21,16 +21,58 @@ h1 {
   transition: all 0.4s ease 0s;
 }
 
+h1 span {
+  display: block;
+  font-size: 0.5em;
+  line-height: 1.3;
+}
+h1 em {
+  font-style: normal;
+  font-weight: 600;
+}
+
+/* Style 8
+   ----------------------------- */
+   .eight h3 {
+    text-align:center;
+    color: #28659a;
+    text-transform:capitalize;
+    font-size:15px; letter-spacing:1px;
+    
+    display: grid;
+    grid-template-columns: .25fr auto .25fr;
+    grid-template-rows: 10px 0;
+    grid-gap: 5px;
+  }
+  
+  .eight h3:after,.eight h3:before {
+    content: " ";
+    display: block;
+    border-bottom: 2px solid #28659a;
+    background-color:#cdecfb;
+  }
+
 /* Style 9
    ----------------------------- */
    .nine h1 {
-    text-align:center; font-size:50px; text-transform:uppercase; color:#3b5e7d; letter-spacing:1px;
-    font-family:"Playfair Display", serif; font-weight:400;
+    text-align:center; 
+    font-size:50px; 
+    text-transform:uppercase; 
+    color:#3b5e7d; 
+    letter-spacing:1px;
+    font-family:"Playfair Display", serif; 
+    font-weight:400;
   }
   .nine h1 span {
     margin-top: 5px;
-      font-size:15px; color:#383562; word-spacing:1px; font-weight:normal; letter-spacing:2px;
-      text-transform: uppercase; font-family:"Raleway", sans-serif; font-weight:500;
+      font-size:17px; 
+      color:#383562; 
+      word-spacing:1px; 
+      font-weight:normal; 
+      letter-spacing:2px;
+      text-transform: uppercase; 
+      font-family:"Raleway", sans-serif; 
+      font-weight:500;
   
       display: grid;
       grid-template-columns: 1fr max-content 1fr;
@@ -112,6 +154,15 @@ nav li a:hover {
   text-decoration: none;
 }
 /* end of nav */
+.hero {
+width: 960px;
+}
+
+/* blurring the image */
+  img:hover {
+    -webkit-filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.2)); /* Chrome, Safari, Opera */
+    filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.2));
+}
 
 .icon {
   width: 15%;
@@ -152,8 +203,3 @@ a:hover {
   color: rgb(127, 246, 255);
 }
 /* end of link styling */
-
-.aw2 {
-  color: #28659a;
-  text-align: center;
-}
