--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ p {
 nav{
   display: inline-block;
   margin: auto;
-  position: sticky;
+  position: fixed;
   width: 100%;
   top:0;
   z-index:10;
@@ -187,7 +187,7 @@ nav li a:hover {
 .page-title {
   color: rgb(58, 70, 130);
   text-align: center;
-  padding-top: 20px;
+  padding-top: 150px;
   
 }
 
