--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body, html {
   height: 100%;
   margin: 0;
-  background: #bc6c1c;
+  background: #c6e2e5;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -39,7 +39,6 @@ p {
   font-family: "Raleway", sans-serif;
   font-size: 20px;
   color: rgb(94, 119, 138);
-  padding-left: 10vw;
 }
 
 /* Style 8
@@ -161,7 +160,8 @@ p {
   text-align: center;
 }
 .about_paragraph {
-  margin-left: 35;
+  text-align: center;
+  margin-left: auto;
 }
 } 
 
@@ -251,7 +251,7 @@ a:hover {
 
 .descript {
   text-align: center;
-  padding-top: 20px;
+  padding-top: 1vw;
 }
 
 .face {
