--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ p {
     content: " ";
     display: block;
     border-bottom: 2px solid #28659a;
-    background-color:#cdecfb;
+    background-color:#c6e2e5;
   }
 
 /* Style 9
@@ -97,7 +97,7 @@ p {
       border-bottom: 1px solid rgb(67, 100, 133);
       border-top: 1px solid rgb(67, 100, 133);
       height: 5px;
-    background-color:#cdecfb;
+    background-color:#c6e2e5;
   }
  /* end of style 9 */
 
