--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,11 @@ p {
   width: 33.33%;
 }
 
+.column1 {
+  float: left;
+  width: 33.33%;
+}
+
 /* Clear floats after the columns not in use */
 .row:after {
   content: "";
