--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body, html {
   height: 100%;
   margin: 0;
   background: #c6e2e5;
+  background-image: url(assets/wave.svg);
+  background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
